--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -30,7 +30,9 @@
     ]
   },
   "icons": {
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
