--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -14,8 +14,10 @@
       "run_at": "document_start"
     }
   ],
-  "icons": {
-    "48": "icon.png",
-    "128": "icon.png"
+ "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
