--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -9,14 +9,20 @@
     "activeTab",
     "scripting"
   ],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_start"
     }
   ],
@@ -28,6 +34,9 @@
         "path": "rules.json"
       }
     ]
+  },
+  "action": {
+    "default_popup": "popup.html"
   },
   "icons": {
     "16": "icons/icon16.png",
