gpt added: localstorage

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -6,7 +6,13 @@
   "permissions": [
     "<all_urls>",
     "webRequest",
-    "webRequestBlocking"
+    "webRequestBlocking",
+    "storage",
+    "tabs",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "*://*/*"
   ],
   "background": {
     "scripts": [
