--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -7,10 +7,12 @@
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess",
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "host_permissions": [
-    "<all_urls>"
+    "<all_urls>",
+    "*://*/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -23,7 +25,7 @@
       "js": [
         "content.js"
       ],
-      "run_at": "document_start"
+      "run_at": "document_idle"
     }
   ],
   "declarative_net_request": {
