--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -5,6 +5,7 @@
   "version": "1.1",
   "permissions": [
     "declarativeNetRequest",
+    "declarativeNetRequestFeedback",
     "declarativeNetRequestWithHostAccess",
     "activeTab",
     "scripting",
